// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`false Badge 1`] = `
<span
  className="pf-c-badge pf-m-unread"
>
  Im expiremental!
  unread
   Badge
</span>
`;

exports[`true Badge 1`] = `
<span
  className="pf-c-badge pf-m-read"
>
  Im expiremental!
  read
   Badge
</span>
`;
